# quantum_slit

./: CMakeLists.txt  README.md  run.sh
include/: schrodinger.hpp  utils.hpp
plots/: animation.py  colormap.py  detection.py  probability.py  tunneling.py
src/: main.cpp  parameters.txt  parameters.txt.bak  probability.cpp  schrodinger.cpp  utils.cpp
